DTU Connect content needs to be added, Message of Coordinator to be added, Download link needs fixing. Rest done

--- a/downloads.html
+++ b/downloads.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Contact Us - IPR Cell, DTU</title>
+    <title>IPR Cell, DTU</title>
     <meta property="og:image" content="assets/img/IMG_20170821_111806495.jpg">
+    <meta name="description" content="The official website of Intellectual Property Rights Cell, DTU">
     <meta property="og:type" content="website">
-    <meta name="description" content="Contact us here!">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="180x180" href="assets/img/apple-icon-180x180.png">
@@ -36,40 +36,37 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="dtuconnect.html">DTU CONNECT</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="about-us.html">ABOUT US</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="our-team.html">OUR TEAM</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="contact-us.html">CONTACT US</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="downloads.html">DOWNLOADS</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact-us.html">CONTACT US</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="downloads.html">DOWNLOADS</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <main class="page">
-        <section class="clean-block clean-form dark">
+    <main class="page contact-us-page">
+        <section class="clean-block clean-form dark custom_section">
             <div class="container">
                 <div class="block-heading">
-                    <h2 class="text-info responsive_heading">Contact Us</h2>
-                    <p>Get in touch with us for further queries</p>
+                    <h2 class="text-info responsive_heading">Downloads</h2>
+                    <p>Some of the important documents for download</p>
                 </div>
                 <form>
                     <div class="row justify-content-center">
                         <div class="form-row" style="width: 100%;">
                             <div class="col">
-                                <div class="col-md-5 feature-box" style="width: auto;max-width: 100%;"><i class="material-icons icon">person</i>
-                                    <h4 class="responsive_heading">Dr Madan Mohan Tripathi</h4>
-                                    <p class="responsive_para">Coordinator, IPR Cell</p>
+                                <div class="col-md-5 feature-box" style="width: auto;max-width: 100%;"><i class="material-icons icon">file_download</i>
+                                    <a href="http://www.dtu.ac.in/Web/AICTE/iprpolicy_2017.pdf" target="_blank">
+                                        <h4 class="responsive_heading">IPR Policy</h4>
+                                    </a>
                                 </div>
                             </div>
                         </div>
                         <div class="form-row" style="width: 100%;">
                             <div class="col">
-                                <div class="col-md-5 feature-box" style="width: auto;max-width: 100%;"><i class="material-icons icon">pin_drop</i>
-                                    <h4 class="responsive_heading">IPR Cell, DTU</h4>
-                                    <p class="responsive_para">Bawana Road, Delhi Technological University, Shahbad Daulatpur Village, Rohini, Delhi, 110042</p>
+                                <div class="col-md-5 feature-box" style="width: auto;max-width: 100%;"><i class="material-icons icon">file_download</i>
+                                    <a href="javascript:void(0);" download="assets/downloads/Disclosure Form_IPR_DTU.rtf">
+                                        <h4 class="responsive_heading">Disclosure form (IPR)</h4>
+                                    </a>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="form-row" style="width: 100%;">
-                            <div class="col" href="mailto:mmtripathi@dce.ac.in">
-                                <div class="col-md-5 feature-box" style="width: auto;max-width: 100%;"><a href="mailto:mmtripathi@dce.ac.in"><i class="material-icons icon">email</i><p class="responsive_para">mmtripathi@dce.ac.in<br></p></a></div>
                             </div>
                         </div>
                     </div>
