--- a/our-team.html
+++ b/our-team.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>About Us - Delhi Technological University</title>
-    <meta name="description" content="The official website of Intellectual Property Rights Cell, DTU">
+    <title>Our Team - IPR Cell, DTU</title>
+    <meta property="og:image" content="assets/img/IMG_20170821_111806495.jpg">
+    <meta property="og:type" content="website">
+    <meta name="description" content="The team of the IPR Cell">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="180x180" href="assets/img/apple-icon-180x180.png">
@@ -16,6 +18,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
@@ -30,80 +33,152 @@
                 id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">HOME</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="dtuconnect.html">DTU CONNECT</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="about-us.html">ABOUT US</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="photo-gallery.html">PHOTO GALLERY</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="our-team.html">OUR TEAM</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="contact-us.html">CONTACT US</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="downloads.html">DOWNLOADS</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <main class="page">
         <section class="clean-block about-us">
+            <div class="container">
+                <div class="block-heading">
+                    <h2 class="text-info responsive_heading">IPR Standing Committee</h2>
+                    <p class="responsive_para" style="font-size: 18px;font-weight: bold;">Roles of IPR Standing Committee</p>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon" style="font-size: 25px;"></i>
+                        <p class="responsive_para">IPR Standing Commitee will be reponsible for evolving detailed procedures to facilitate implementation of the IPR policy of DTU</p>
+                    </div>
+                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon" style="font-size: 25px;"></i>
+                        <p class="responsive_para">Arbitrate on appeals made and any clearifications sought</p>
+                    </div>
+                </div>
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th class="text-center">Name</th>
+                                <th class="text-center">Designation</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="http://dtu.ac.in/Web/Administrations/Vice-Chancellor.php" target="_blank">Hon’ble Vice Chancellor, Prof. Yogesh Singh<br></a></td>
+                                <td class="text-center">Chairperson (Ex-officio)</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="http://people.dtu.ac.in/faculty/view.php?uname=atrivedi" target="_blank">Prof. A Trivedi, Dean IRD<br></a></td>
+                                <td class="text-center">Member (Ex-officio)</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="http://dtu.ac.in/modules/facilities/people/faculty/view.php?uname=scsharma" target="_blank">Prof. Suresh C Sharma, Dean Academic - PG<br></a></td>
+                                <td class="text-center">Member (Ex-officio)</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/Electrical/faculty/madhusudan.php" target="_blank">Prof. Madhusudan Singh, Dean Academic - UG<br></a></td>
+                                <td class="text-center">Member (Ex-officio)</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/Mechanical/faculty/samsher.php" target="_blank">Prof. Samsher, Registrar<br></a></td>
+                                <td class="text-center">Member</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/Electrical/faculty/mmtripathi.php" target="_blank">Prof. M.M. Tripathi, Coordinator IPR Cell<br></a></td>
+                                <td class="text-center">Member</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="mailto:rkshukla@dce.edu" target="_blank">Prof. Ramakant Shukla, Librarian<br></a></td>
+                                <td class="text-center">Member</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="mailto:coe.dtu@dce.ac.in" target="_blank">Sh. Kamal Pathak, Controller of Examinations<br></a></td>
+                                <td class="text-center">Secretary</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </section>
+        <section class="clean-block about-us">
             <div class="container" style="width: 100%;">
-                <div class="block-heading" style="width: 100%;">
-                    <h2 class="text-info">Our Team</h2>
-                    <p class="d-inline" style="font-size: 14px;">In Pursuance of the XII plan&nbsp;guidelines of University Grant Commission for establishment of Internal&nbsp; Quality Assurance Cell (IQAC), the Hon’ble Vice Chancellor is pleased to constitute the Internal Quality Assurance Cell.
-                        <br></p>
+                <div class="block-heading" style="width: 100%;padding-top: 0px;">
+                    <h2 class="text-info responsive_heading">Training and application screening committee</h2>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="col-sm-12 col-md-4 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar1.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">John Smith</h4>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-4 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar2.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">Robert Downturn</h4>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-4 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar3.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">Ally Sanders</h4>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
-                            </div>
-                        </div>
-                        <div class="card clean-card text-center"></div>
-                    </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-sm-12 col-md-4 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar1.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">John Smith</h4>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-4 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar2.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">Robert Downturn</h4>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-4 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar3.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">Ally Sanders</h4>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th class="text-center">Name</th>
+                                <th class="text-center">Designation</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/Electrical/faculty/mmtripathi.php" target="_blank">Prof. M.M. Tripathi, Dept. of Electrical Engg.</a></td>
+                                <td class="text-center">Chairperson</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/AppliedPhysics/faculty/msmehata.php" target="_blank">Dr Mohan Singh Mehta, Dept. of Applied Physics</a></td>
+                                <td class="text-center">Deputy Chairperson</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/Electrical/faculty/anup.php" target="_blank">Dr Anup Mandpura, Dept. of Electrical Engg.<br></a></td>
+                                <td class="text-center">Member Secretary</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/AppliedChemistry/faculty/richas.php" target="_blank">Dr Richa Srivastava, Dept. of Applied Chemistry</a></td>
+                                <td class="text-center">Member</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/AppliedPhysics/faculty/amrishpanwar.php" target="_blank">Dr Amrish Panwar, Dept. of Applied Physics</a></td>
+                                <td class="text-center">Member</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/AppliedMathematics/faculty/dineshudar.php" target="_blank">Dr Dinesh Udar, Dept. of Applied Mathematics</a></td>
+                                <td class="text-center">Member</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/BioTech/faculty/asmitadas.pdf" target="_blank">Dr Asmita Das, Dept. of Biotechnology</a></td>
+                                <td class="text-center">Member</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/Mechanical/faculty/saurabhagrawal.php" target="_blank">Dr Saurabh Aggarwal, Dept. of Mechanical Engg.</a></td>
+                                <td class="text-center">Member</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="mailto:dubeyrishi018@gmail.com" target="_blank">Dr Hrishikesh Dubey, Dept. of Civil Engg</a></td>
+                                <td class="text-center">Member</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/Environment/faculty/anunay.php" target="_blank">Sh. Anunay Gaur, Dept. of Environmental Engg.</a></td>
+                                <td class="text-center">Member</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/CSE/faculty/sanjaypatidar.php" target="_blank">Dr Sanjay Patidar, Dept. of Computer Engg.</a></td>
+                                <td class="text-center">Member</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/Electronics/faculty/njayanthi.php" target="_blank">Dr N Jayanthi, Dept. of Electronics and Comm. Engg.</a></td>
+                                <td class="text-center">Member</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/design/faculty/ravindra.pdf" target="_blank">Dr Ravindra Singh, Dept. of Design</a></td>
+                                <td class="text-center">Member</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/DSM/faculty/yashdeep.pdf" target="_blank">Dr Yashdeep Singh, Delhi School of Management</a></td>
+                                <td class="text-center">Member</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center"><a class="no_decoration" href="mailto:anurag.chaturvedi@dtu.ac.in" target="_blank">Sh. Anurag Chaturvedi, USME</a></td>
+                                <td class="text-center">Member</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </section>
