--- a/about-us.html
+++ b/about-us.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Features - Delhi Technological University</title>
-    <meta name="description" content="The official website of Intellectual Property Rights Cell, DTU">
+    <title>About Us - IPR Cell, DTU</title>
+    <meta property="og:image" content="assets/img/IMG_20170821_111806495.jpg">
+    <meta property="og:type" content="website">
+    <meta name="description" content="About the Intellectual Property Rights cell, DTU">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="180x180" href="assets/img/apple-icon-180x180.png">
@@ -16,6 +18,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
@@ -30,10 +33,11 @@
                 id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">HOME</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="dtuconnect.html">DTU CONNECT</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="about-us.html">ABOUT US</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="photo-gallery.html">PHOTO GALLERY</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="our-team.html">OUR TEAM</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="contact-us.html">CONTACT US</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="downloads.html">DOWNLOADS</a></li>
                 </ul>
             </div>
         </div>
@@ -42,49 +46,54 @@
         <section class="clean-block features">
             <div class="container">
                 <div class="block-heading">
-                    <h2 class="text-info responsive_heading">About IPR Cell, DTU</h2>
-                    <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <h2 class="text-info responsive_heading">Role of IPR Cell</h2>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon"></i>
-                        <h4>Point 1</h4>
-                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon" style="font-size: 25px;"></i>
+                        <p class="responsive_para">Drafting IPR policy &amp; changes (if any) from time to time &amp; obtain approval from competent authority.</p>
                     </div>
-                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon"></i>
-                        <h4>Point 2</h4>
-                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon" style="font-size: 25px;"></i>
+                        <p class="responsive_para">Administering IPR policy of DTU.</p>
                     </div>
-                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon"></i>
-                        <h4>Point 3</h4>
-                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon" style="font-size: 25px;"></i>
+                        <p class="responsive_para">Facilitate Faculty/ Student/ Project Staff/ Supporting Staff/ Visitors in all IPR application activites</p>
                     </div>
-                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon"></i>
-                        <h4>Point 4</h4>
-                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon" style="font-size: 25px;"></i>
+                        <p class="responsive_para">Empanel Attorney for filing patent on behalf of DTU</p>
                     </div>
-                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon"></i>
-                        <h4>Point 5</h4>
-                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon" style="font-size: 25px;"></i>
+                        <p class="responsive_para">Work on behalf of DTU to process &amp; manage IP registrations</p>
                     </div>
-                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon"></i>
-                        <h4>Point 6</h4>
-                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon" style="font-size: 25px;"></i>
+                        <p class="responsive_para">Regularly review IP cases (filed/ granted applications)</p>
                     </div>
-                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon"></i>
-                        <h4>Point 7</h4>
-                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon" style="font-size: 25px;"></i>
+                        <p class="responsive_para">Coordinate with inventor(s) to proactively identify third parties for development &amp; commercialization</p>
                     </div>
-                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon"></i>
-                        <h4>Point 8</h4>
-                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon" style="font-size: 25px;"></i>
+                        <p class="responsive_para">Custody of all IPR related documents</p>
                     </div>
-                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon"></i>
-                        <h4>Point 9</h4>
-                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon" style="font-size: 25px;"></i>
+                        <p class="responsive_para">To administer all matters related to IP transfer on the advice of IRD, DTU</p>
                     </div>
-                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon"></i>
-                        <h4>Point 10</h4>
-                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon" style="font-size: 25px;"></i>
+                        <p class="responsive_para">Organization of IPR awareness at DTU</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="block-heading">
+                    <h2 class="text-info responsive_heading">Activities leading to generation of IPR</h2>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon" style="font-size: 25px;"></i>
+                        <p class="responsive_para">Research taken up by faculty/ student/ project staff/ supporting staff/ visitor</p>
+                    </div>
+                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon" style="font-size: 25px;"></i>
+                        <p class="responsive_para">Colloborative research undertaken with other institutions, Govt. Dept. &amp; PSU’s and Pvt. companies</p>
+                    </div>
+                    <div class="col-md-5 feature-box"><i class="fas fa-bullseye icon" style="font-size: 25px;"></i>
+                        <p class="responsive_para">Research supported by companies and other private organizations through research projects or consultancy assignments</p>
                     </div>
                 </div>
             </div>
