--- a/dtuconnect.html
+++ b/dtuconnect.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Contact Us - IPR Cell, DTU</title>
+    <title>DTU Connect - IPR Cell, DTU</title>
     <meta property="og:image" content="assets/img/IMG_20170821_111806495.jpg">
     <meta property="og:type" content="website">
-    <meta name="description" content="Contact us here!">
+    <meta name="description" content="The home page of DTU connect">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="180x180" href="assets/img/apple-icon-180x180.png">
@@ -33,47 +33,51 @@
                 id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">HOME</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="dtuconnect.html">DTU CONNECT</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="dtuconnect.html">DTU CONNECT</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="about-us.html">ABOUT US</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="our-team.html">OUR TEAM</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="contact-us.html">CONTACT US</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact-us.html">CONTACT US</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="downloads.html">DOWNLOADS</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <main class="page">
-        <section class="clean-block clean-form dark">
+        <section class="clean-block features">
             <div class="container">
                 <div class="block-heading">
-                    <h2 class="text-info responsive_heading">Contact Us</h2>
-                    <p>Get in touch with us for further queries</p>
+                    <h2 class="text-info responsive_heading">About DTU Connect</h2>
+                    <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
                 </div>
-                <form>
-                    <div class="row justify-content-center">
-                        <div class="form-row" style="width: 100%;">
-                            <div class="col">
-                                <div class="col-md-5 feature-box" style="width: auto;max-width: 100%;"><i class="material-icons icon">person</i>
-                                    <h4 class="responsive_heading">Dr Madan Mohan Tripathi</h4>
-                                    <p class="responsive_para">Coordinator, IPR Cell</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-row" style="width: 100%;">
-                            <div class="col">
-                                <div class="col-md-5 feature-box" style="width: auto;max-width: 100%;"><i class="material-icons icon">pin_drop</i>
-                                    <h4 class="responsive_heading">IPR Cell, DTU</h4>
-                                    <p class="responsive_para">Bawana Road, Delhi Technological University, Shahbad Daulatpur Village, Rohini, Delhi, 110042</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-row" style="width: 100%;">
-                            <div class="col" href="mailto:mmtripathi@dce.ac.in">
-                                <div class="col-md-5 feature-box" style="width: auto;max-width: 100%;"><a href="mailto:mmtripathi@dce.ac.in"><i class="material-icons icon">email</i><p class="responsive_para">mmtripathi@dce.ac.in<br></p></a></div>
-                            </div>
-                        </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-5 feature-box"><i class="icon-star icon"></i>
+                        <h4 class="responsive_heading">Bootstrap 4</h4>
+                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
                     </div>
-                </form>
+                    <div class="col-md-5 feature-box"><i class="icon-pencil icon"></i>
+                        <h4 class="responsive_heading">Customizable</h4>
+                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    </div>
+                    <div class="col-md-5 feature-box"><i class="icon-screen-smartphone icon"></i>
+                        <h4 class="responsive_heading">Responsive</h4>
+                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    </div>
+                    <div class="col-md-5 feature-box"><i class="icon-refresh icon"></i>
+                        <h4 class="responsive_heading">All Browser Compatibility</h4>
+                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    </div>
+                    <div class="col-md-5 feature-box"><i class="icon-refresh icon"></i>
+                        <h4 class="responsive_heading">All Browser Compatibility</h4>
+                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    </div>
+                    <div class="col-md-5 feature-box"><i class="icon-refresh icon"></i>
+                        <h4 class="responsive_heading">All Browser Compatibility</h4>
+                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    </div>
+                </div>
+                <div class="block-heading" style="margin-bottom: 0px;">
+                    <h4 class="text-info responsive_heading" style="margin-bottom: 0px;font-size: 30px;"><a id="custom_btn" class="btn btn-primary btn-lg" href="javascript:void(0);">Go to DTU Connect &gt;&gt;</a></h4>
+                </div>
             </div>
         </section>
     </main>
