--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Delhi Technological University</title>
+    <title>Home - IPR Cell, DTU</title>
+    <meta property="og:image" content="assets/img/IMG_20170821_111806495.jpg">
     <meta name="description" content="The official website of Intellectual Property Rights Cell, DTU">
+    <meta property="og:type" content="website">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="180x180" href="assets/img/apple-icon-180x180.png">
@@ -16,6 +18,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
@@ -30,10 +33,11 @@
                 id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html">HOME</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="dtuconnect.html">DTU CONNECT</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="about-us.html">ABOUT US</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="photo-gallery.html">PHOTO GALLERY</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="our-team.html">OUR TEAM</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="contact-us.html">CONTACT US</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="downloads.html">DOWNLOADS</a></li>
                 </ul>
             </div>
         </div>
@@ -47,10 +51,10 @@
         <section class="clean-block clean-info dark">
             <div class="container">
                 <div class="block-heading">
-                    <h2 class="text-info responsive_heading">Message of Director</h2>
+                    <h2 class="text-info responsive_heading">Message from Coordinator</h2>
                 </div>
                 <div class="row align-items-center">
-                    <div class="col-md-6"><img class="img-thumbnail img-fluid" src="assets/img/hod%20tnp.jpg"></div>
+                    <div class="col-md-6"><img class="img-thumbnail img-fluid" src="assets/img/29027410_2150205678541454_2123960331163140096_n.jpg"></div>
                     <div class="col-md-6">
                         <div class="getting-started-info">
                             <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis lacus leo, euismod quis nunc eget, vestibulum auctor nisl. Mauris volutpat id urna a tempor. Quisque tempus, risus malesuada vehicula venenatis, lacus lectus malesuada
@@ -65,95 +69,85 @@
             <div class="container">
                 <div class="block-heading">
                     <h2 class="text-info responsive_heading">About Us</h2>
-                    <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <p class="responsive_para">The IPR Cell, DTU is the administrative body of DTU to manage and administer all IPR related activities</p>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-md-5 feature-box"><i class="icon-star icon"></i>
+                    <div class="d-none col-md-5 feature-box"><i class="icon-star icon"></i>
                         <h4>Point 1</h4>
-                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                        <p class="responsive_para" style="font-size: 15px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
                     </div>
-                    <div class="col-md-5 feature-box"><i class="icon-pencil icon"></i>
+                    <div class="d-none col-md-5 feature-box"><i class="icon-pencil icon"></i>
                         <h4>Point 2</h4>
-                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                        <p class="responsive_para" style="font-size: 15px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
                     </div>
-                    <div class="col-md-5 feature-box"><i class="icon-screen-smartphone icon"></i>
+                    <div class="d-none col-md-5 feature-box"><i class="icon-screen-smartphone icon"></i>
                         <h4>Point 3</h4>
-                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                        <p class="responsive_para" style="font-size: 15px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
                     </div>
-                    <div class="col-md-5 feature-box"><i class="icon-refresh icon"></i>
+                    <div class="d-none col-md-5 feature-box"><i class="icon-refresh icon"></i>
                         <h4>Point 4</h4>
-                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                        <p class="responsive_para" style="font-size: 15px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
                     </div>
-                </div>
-            </div>
+                </div><a class="btn btn-primary btn-lg button_center" href="about-us.html">Learn More</a></div>
         </section>
-        <section class="clean-block slider dark">
+        <section class="clean-block features">
             <div class="container">
-                <div class="block-heading">
-                    <h2 class="text-info responsive_heading">Photo Gallery</h2>
-                    <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
-                </div>
-                <div class="carousel slide" data-ride="carousel" id="carousel-1">
-                    <div class="carousel-inner" role="listbox">
-                        <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/scenery/image1.jpg" alt="Slide Image"></div>
-                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/scenery/image4.jpg" alt="Slide Image"></div>
-                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/scenery/image6.jpg" alt="Slide Image"></div>
-                    </div>
-                    <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button"
-                            data-slide="next"><span class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a></div>
-                    <ol class="carousel-indicators">
-                        <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-1" data-slide-to="1"></li>
-                        <li data-target="#carousel-1" data-slide-to="2"></li>
-                    </ol>
-                </div>
-            </div>
-        </section>
-        <section class="clean-block about-us">
-            <div class="container">
-                <div class="block-heading">
-                    <h2 class="text-info responsive_heading">Our team</h2>
+                <div class="block-heading" style="padding-top: 0px;">
+                    <h2 class="text-info">About DTU Connect</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-sm-12 col-lg-3 col-xl-3">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar1.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">John Smith</h4>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
-                            </div>
-                        </div>
+                    <div class="col-md-5 feature-box"><i class="icon-star icon"></i>
+                        <h4>Bootstrap 4</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
                     </div>
-                    <div class="col-sm-12 col-lg-3 col-xl-3">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar2.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">Robert Downturn</h4>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
-                            </div>
-                        </div>
+                    <div class="col-md-5 feature-box"><i class="icon-pencil icon"></i>
+                        <h4>Customizable</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
                     </div>
-                    <div class="col-sm-12 col-lg-3 col-xl-3">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar3.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">Ally Sanders</h4>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
-                            </div>
-                        </div>
+                    <div class="col-md-5 feature-box"><i class="icon-screen-smartphone icon"></i>
+                        <h4>Responsive</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
                     </div>
-                    <div class="col-sm-12 col-lg-3 col-xl-3">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar3.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">Ally Sanders</h4>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
-                            </div>
-                        </div>
+                    <div class="col-md-5 feature-box"><i class="icon-refresh icon"></i>
+                        <h4>All Browser Compatibility</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
                     </div>
                 </div>
-            </div>
+            </div><a class="btn btn-primary btn-lg button_center" href="dtuconnect.html">Learn More</a></section>
+        <section class="clean-block features">
+            <div class="container">
+                <div class="block-heading" style="padding-top: 0px;">
+                    <h2 class="text-info">Our Team</h2>
+                </div>
+                <div class="table-responsive" style="margin-left: auto;margin-right: auto;">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th class="text-center">Name</th>
+                                <th class="text-center">Designation</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="text-center responsive_para"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/Electrical/faculty/mmtripathi.php" target="_blank">Prof. MM Tripathi</a></td>
+                                <td class="text-center responsive_para">Coordinator, IPR Cell</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center responsive_para"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/AppliedChemistry/faculty/ramsingh.php" target="_blank">Dr Ram Singh</a></td>
+                                <td class="text-center responsive_para">Co-coordinator, IPR Cell</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center responsive_para"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/AppliedChemistry/faculty/rolipurwar.php" target="_blank">Dr Roli Purwar</a></td>
+                                <td class="text-center responsive_para">Co-coordinator, IPR Cell</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center responsive_para"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/Electrical/faculty/anup.php" target="_blank">Dr Anup Mandpura</a></td>
+                                <td class="text-center responsive_para">Co-coordinator, IPR Cell</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div><a class="btn btn-primary btn-lg button_center" href="our-team.html">Learn More</a></div>
         </section>
     </main>
     <footer class="page-footer dark" style="height: 0px;padding-top: 0px;">
