Downloads problem fixed

--- a/downloads.html
+++ b/downloads.html
@@ -54,7 +54,7 @@
                         <div class="form-row" style="width: 100%;">
                             <div class="col">
                                 <div class="col-md-5 feature-box" style="width: auto;max-width: 100%;"><i class="material-icons icon">file_download</i>
-                                    <a href="http://www.dtu.ac.in/Web/AICTE/iprpolicy_2017.pdf" target="_blank">
+                                    <a href="http://www.dtu.ac.in/Web/AICTE/iprpolicy_2017.pdf" download>
                                         <h4 class="responsive_heading">IPR Policy</h4>
                                     </a>
                                 </div>
@@ -63,7 +63,7 @@
                         <div class="form-row" style="width: 100%;">
                             <div class="col">
                                 <div class="col-md-5 feature-box" style="width: auto;max-width: 100%;"><i class="material-icons icon">file_download</i>
-                                    <a href="javascript:void(0);" download="assets/downloads/Disclosure Form_IPR_DTU.rtf">
+                                    <a href="assets/downloads/Disclosure_Form_IPR_DTU.rtf" download>
                                         <h4 class="responsive_heading">Disclosure form (IPR)</h4>
                                     </a>
                                 </div>
