some more minor changes in downloads.html

--- a/downloads.html
+++ b/downloads.html
@@ -47,7 +47,7 @@
             <div class="container">
                 <div class="block-heading">
                     <h2 class="text-info responsive_heading">Downloads</h2>
-                    <p>Some important documents for download</p>
+                    <p>Some of the important documents for download</p>
                 </div>
                 <form>
                     <div class="row justify-content-center">
