added intro content for DTU connect

--- a/index.html
+++ b/index.html
@@ -94,25 +94,25 @@
             <div class="container">
                 <div class="block-heading" style="padding-top: 0px;">
                     <h2 class="text-info">About DTU Connect</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <p>The past and present - Building the future</p>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-md-5 feature-box"><i class="icon-star icon"></i>
-                        <h4>Bootstrap 4</h4>
+                    <div class="col-md-4 feature-box"><i class="fas fa-chalkboard-teacher icon"></i>
+                        <h4>1 on 1 Mentorship</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
                     </div>
-                    <div class="col-md-5 feature-box"><i class="icon-pencil icon"></i>
-                        <h4>Customizable</h4>
+                    <div class="col-md-4 feature-box"><i class="fas fa-industry icon"></i>
+                        <h4>Industry experts</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
                     </div>
-                    <div class="col-md-5 feature-box"><i class="icon-screen-smartphone icon"></i>
-                        <h4>Responsive</h4>
+                    <div class="col-md-4 feature-box"><i class="fas fa-user-graduate icon"></i>
+                        <h4>Your own alumni</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
                     </div>
-                    <div class="col-md-5 feature-box"><i class="icon-refresh icon"></i>
+                    <!-- <div class="col-md-5 feature-box"><i class="icon-refresh icon"></i>
                         <h4>All Browser Compatibility</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
-                    </div>
+                    </div> -->
                 </div>
             </div><a class="btn btn-primary btn-lg button_center" href="dtuconnect.html">Learn More</a></section>
         <section class="clean-block features">
