Content added for DTU connect

--- a/dtuconnect.html
+++ b/dtuconnect.html
@@ -18,26 +18,33 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
+    <link rel="stylesheet"
+        href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
 </head>
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
-        <div class="container"><a class="navbar-brand logo" id="dtu_logo" href="#"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse"
-                id="navcol-1">
+        <div class="container"><a class="navbar-brand logo" id="dtu_logo" href="#"></a><button data-toggle="collapse"
+                class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span
+                    class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">HOME</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="dtuconnect.html">DTU CONNECT</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="dtuconnect.html">DTU
+                            CONNECT</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="about-us.html">ABOUT US</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="our-team.html">OUR TEAM</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact-us.html">CONTACT US</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="downloads.html">DOWNLOADS</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact-us.html">CONTACT US</a>
+                    </li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="downloads.html">DOWNLOADS</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -47,36 +54,35 @@
             <div class="container">
                 <div class="block-heading">
                     <h2 class="text-info responsive_heading">About DTU Connect</h2>
-                    <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <p>The past and present - Building the future</p>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-md-5 feature-box"><i class="icon-star icon"></i>
-                        <h4 class="responsive_heading">Bootstrap 4</h4>
-                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <div class="col-md-4 feature-box"><i class="fas fa-chalkboard-teacher icon"></i>
+                        <h4 class="responsive_heading">1 on 1 Mentorship</h4>
+                        <p class="responsive_para">An exclusive mentorship session for DTU stundents who are working on
+                            their research idea, major project or startup idea with the prolific and versatile DCE
+                            alumni base established in various sectors across the globe on the DTU CONNECT app.</p>
                     </div>
-                    <div class="col-md-5 feature-box"><i class="icon-pencil icon"></i>
-                        <h4 class="responsive_heading">Customizable</h4>
-                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <div class="col-md-4 feature-box"><i class="fas fa-industry icon"></i>
+                        <h4 class="responsive_heading">Industry experts</h4>
+                        <p class="responsive_para">DTU has a very large and versatile alumni base, spread over a variety
+                            of sectors, be it in research, marketing, technology, writing or even acting, DTU alumni are
+                            everywhere! They are industry experts and figure amongst the who's who worldwide. DTU
+                            Connect is the perfect platform for our DTU students to connect with these immaculate
+                            experts.</p>
                     </div>
-                    <div class="col-md-5 feature-box"><i class="icon-screen-smartphone icon"></i>
-                        <h4 class="responsive_heading">Responsive</h4>
-                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <div class="col-md-4 feature-box"><i class="fas fa-user-graduate icon"></i>
+                        <h4 class="responsive_heading">Your own alumni</h4>
+                        <p class="responsive_para">Dtu has a diverse & versatile alumni network working in a myriad of
+                            sectors. DTU connect is the perfect platform for our DTU Students to connect instantly with
+                            these renowned personalities who figure amongst the who's who worldwide.</p>
                     </div>
-                    <div class="col-md-5 feature-box"><i class="icon-refresh icon"></i>
-                        <h4 class="responsive_heading">All Browser Compatibility</h4>
-                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
-                    </div>
-                    <div class="col-md-5 feature-box"><i class="icon-refresh icon"></i>
-                        <h4 class="responsive_heading">All Browser Compatibility</h4>
-                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
-                    </div>
-                    <div class="col-md-5 feature-box"><i class="icon-refresh icon"></i>
-                        <h4 class="responsive_heading">All Browser Compatibility</h4>
-                        <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
-                    </div>
+
                 </div>
                 <div class="block-heading" style="margin-bottom: 0px;">
-                    <h4 class="text-info responsive_heading" style="margin-bottom: 0px;font-size: 30px;"><a id="custom_btn" class="btn btn-primary btn-lg" href="javascript:void(0);">Go to DTU Connect &gt;&gt;</a></h4>
+                    <h4 class="text-info responsive_heading" style="margin-bottom: 0px;font-size: 30px;"><a
+                            id="custom_btn" class="btn btn-primary btn-lg" href="javascript:void(0);">Go to DTU Connect
+                            &gt;&gt;</a></h4>
                 </div>
             </div>
         </section>
