--- a/index.html
+++ b/index.html
@@ -99,20 +99,16 @@
                 <div class="row justify-content-center">
                     <div class="col-md-4 feature-box"><i class="fas fa-chalkboard-teacher icon"></i>
                         <h4>1 on 1 Mentorship</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                        <p>Exclusive mentorship sessions by esteemed alumni for DTU students</p>
                     </div>
                     <div class="col-md-4 feature-box"><i class="fas fa-industry icon"></i>
                         <h4>Industry experts</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                        <p>Connect with the leading experts of industries, all on a single platform</p>
                     </div>
                     <div class="col-md-4 feature-box"><i class="fas fa-user-graduate icon"></i>
                         <h4>Your own alumni</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                        <p>Connect with the alumni who are one of the best in their domains</p>
                     </div>
-                    <!-- <div class="col-md-5 feature-box"><i class="icon-refresh icon"></i>
-                        <h4>All Browser Compatibility</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
-                    </div> -->
                 </div>
             </div><a class="btn btn-primary btn-lg button_center" href="dtuconnect.html">Learn More</a></section>
         <section class="clean-block features">
